# testspeak

./: .gitignore  readme.txt
asioserver/: gserver.files  main.cpp  server.cpp  server.h
client/: Makefile  Makefile.am  compile.sh  config.status  configure.ac  http_client.cpp  http_client_utils.cpp  http_header.cpp  json_writer.cpp  main.cpp  newproj.config  newproj.files  newproj.includes  something.sh  something2.sh  tcp_client.cpp
client/include/: http_client.hpp  http_client_utils.hpp  tcp_client.hpp
consoleserver/: consoleserver.pro  server.cpp  server.h
graphicClient/: Ai.cpp  Ai.h  Ai.i  Ai_wrap.cxx  base.json  client.cpp  client.h  config.json  console.cpp  console.h  consoleClient.pro  consolemain.cpp  dialog.cpp  dialog.h  graphicClient.pro  main.cpp  tl.json
graphicClient/ai/: legacyAi.lua  legacyAiNoGender.lua  xiaofang.lua  xiaozhen.lua
graphicClient/ai/lib/: AiCommon.lua
graphicClient/android/: AndroidManifest.xml
graphicClient/lua/: llex.c
server/: change.txt  dialog.cpp  dialog.h  greet.txt  main.cpp  parrotdup.txt  rc.qrc  recvdup.txt  senddup.txt  untitled.pro
test/asioserver/: CMakeLists.txt  main.cpp  server.cpp
test/client/: CMakeLists.txt  http_client_utils.cpp  http_header.cpp  json_reader.cpp  main.cpp  new_line.cpp  newproj.includes
test/server/: dialog.h  untitled.pro
